# lazarillo

./: CMakeLists.txt  README.md  package.xml  setup.py
arduino/: lazarillo.ino
data/: saved_points.json
launch/: localization.launch  mapping.launch  odom_test.launch  rtabmap.launch
rviz/: lazarillo.rviz
scripts/: a_star_server.py  control_xbox.py  follow_path.py  initialize.py  kinect_play.py  kinect_record.py  map_to_base.py  odom_pub.py
src/lazarillo/: node.py
urdf/: lazarillo.xacro  macros.xacro
